Correct icon alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,7 +59,7 @@ nav span {
 }
 
 nav img {
-  width: 1.8rem;
+  width: 2rem;
 }
 
 nav > div:first-child span {
@@ -68,7 +68,7 @@ nav > div:first-child span {
 }
 
 nav > div:first-child img {
-  width: 2.4rem;
+  width: 2.7rem;
 }
 
 .header-container {
